--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "material-icons": "^1.13.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-horizontal-scrolling-menu": "^2.7.1",
         "react-router-dom": "^6.14.1",
         "react-scripts": "5.0.1",
         "react-scroll": "^1.8.9",
